feat: GET endpoint for book selling detail
