# pertiv-backend/lib/swagger/docApi.json
@@ -591,6 +591,76 @@
           }
         }
       }
+    },
+    "/staff/book-selling/{id}": {
+      "get": {
+        "tags": ["Staff"],
+        "summary": "Get detail book selling",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "ID of the book selling",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": { "type": "boolean" },
+                "statusCode": { "type": "number" },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "id": { "type": "string" },
+                    "title": { "type": "string" },
+                    "description": { "type": "string" },
+                    "language": { "type": "string" },
+                    "stock": { "type": "number" },
+                    "imageUrl": { "type": "string", "nullable": true },
+                    "created_at": { "type": "boolean" },
+                    "user_id": { "type": "boolean" },
+                    "publisher_id": { "type": "boolean" },
+                    "writer_id": { "type": "boolean" }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Error: Staff Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": { "type": "boolean" },
+                "statusCode": { "type": "number" },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": { "type": "boolean" },
+                "statusCode": { "type": "number" },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
